# Seminar_NDSU_2020

./: README.md  diff.txt
2.2/: CMakeCache.txt  clean  cleandat
2.2/OUTPUT/: sw_surf_3d.m
2.2/data/: data_FD_nd.h  data_basicmodel.h  data_default.h
2.2/include/: Commands.h  compute_ot.h  find_oc.h  find_oc_texit.h  saveCoupeMex.h  secondorder_itSL_evo_omp.h
2.5/: CMakeCache.txt  Makefile  clean  cmake_install.cmake  exe
2.5/OUTPUT/: loadFile.m  output_view3d.m  output_view_movie1d.m  output_view_movie2d.m
2.5/data/: data_FD_1d_advection.h  data_FD_1d_advection_default.h  data_FD_2d_ex1_advanced.h  data_FD_3d_rot.h  data_FD_zermelo_default.h  data_advancedmodel.h  data_fungus.h  data_ivan.h  data_simulation.h  data_user_biotroph_fungi_game.h
2.5/include/: Commands.h  HJB.h  secondorder_itSL_evo.h
2.5/src/: HJB_user.cpp  (+1 more)
ivan_original/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ivan_to_2.5/: CMakeCache.txt  CMakeLists.txt  Makefile  Value_function_tau=5.eps  cleandat  cmake_install.cmake  exe  u_1_tau=5.eps  u_2_tau=5.eps
ivan_to_2.5/data/: data_FD_2d_2c.h  data_FD_2d_2c_traj.h  data_FD_2d_ex1_basic.h  data_FD_2d_periodic.h  data_FD_nd.h  data_FD_value.h  data_FD_zermelo_valuereconstruction.h  data_SL_steady.h  data_basicmodel.h  data_basicmodel_test.h  data_ivan.h
ivan_to_2.5/include/: HJB.h  RegularMesh.h
ivan_to_2.5/src/: main.cpp
new/: CMakeCache.txt  Makefile  cmake_install.cmake  version.txt
rochj-2.2-21apr2017-linux64/: Makefile  cmake_install.cmake
rochj-2.5.4-28avr2020-linux64/: CMakeCache.txt  Makefile  cmake_install.cmake
temp/: exe
(+86 files in other folders)
